<resources>
    <string name="app_name">Movie-IQ</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="points">Points: </string>
    <string name="tier">Tier</string>
    <string name="welcome">Welcome</string>
    <string name="highscore">! Highscore is:</string>
    <string name="submit">Submit</string>
    <string name="tier_1">Tier1</string>
    <string name="tier_2">Tier2</string>
    <string name="tier_3">Tier3</string>
    <string name="tier_4">Tier4</string>
    <string name="tier_5">Tier5</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Let me login</string>
    <string name="btn_sign_out">Logout</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="musictxt">Music:</string>
    <string name="enter_password">Enter Password!</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_username">Enter Username!</string>
    <string name="rank_1">Film Novice</string>
    <string name="rank_2">Casual Movie Goer</string>
    <string name="rank_3">Cinema Prospect</string>
    <string name="rank_4">Film Buff</string>
    <string name="rank_5">Film Student</string>
    <string name="rank_6">Movies Prodigy</string>
    <string name="rank_7">Cinema Scholar</string>
    <string name="rank_8">Movie Expert</string>
    <string name="rank_9">Cinema God</string>
    <string name="rank_10">Roger Ebert</string>
    <string name="how_to_play">How To Play</string>
    <string name="start_game">Start Game</string>
    <string name="user">user</string>
    <string name="users">users</string>
    <string name="soundtrack">soundtrack</string>
    <string name="dot">.</string>
    <string name="underscore">_</string>
    <string name="chosen_tier">chosenTier</string>
    <string name="chosen_bt">chosenBt</string>
    <string name="questions">questions</string>
    <string name="question">question</string>
    <string name="well_done">Well Done!</string>
    <string name="failure">Try Again</string>
    <string name="answer_prompt">The answer is:</string>
    <string name="tier_blocked">"You must answer at least 5 question in the previous tier in order to open this one!"</string>

</resources>
